--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               <li data-filter="*" class="filter-active">Mind</li>
               <li data-filter=".filter-app">Szoba</li>
               <li data-filter=".filter-card">Wellness</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-web">Szórakozás</li>
             </ul>
           </div>
         </div>
@@ -214,9 +214,9 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/szoba.jpg" class="img-fluid" alt="">
-                <a href="assets/img/szoba.jpg" data-gallery="portfolioGallery"
-                  class="link-preview portfolio-lightbox" title="Kétágyas szoba erkéllyel"><i class="bx bx-plus"></i></a>
-                    class="bx bx-link"></i></a>
+                <a href="assets/img/szoba.jpg" data-gallery="portfolioGallery" class="link-preview portfolio-lightbox"
+                  title="Kétágyas szoba erkéllyel"><i class="bx bx-plus"></i></a>
+                class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -228,16 +228,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-2.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <img src="assets/img/bowling.jpg" class="img-fluid" alt="">
+                <a href="assets/img/bowling.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery"
+                  title="Bowling"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 3</a></h4>
-                <p>Web</p>
+                <h4>Bowling</h4>
               </div>
             </div>
           </div>
@@ -248,7 +245,7 @@
                 <img src="assets/img/furdoszoba.jpg" class="img-fluid" alt="">
                 <a href="assets/img/furdoszoba.jpg" class="link-preview portfolio-lightbox"
                   data-gallery="portfolioGallery" title="Fürdőszoba"><i class="bx bx-plus"></i></a>
-                    class="bx bx-link"></i></a>
+                class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -266,8 +263,7 @@
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Medence</a></h4>
-                <p>Card</p>
+                <h4>Medence</h4>
               </div>
             </div>
           </div>
@@ -275,16 +271,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.1s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-5.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <img src="assets/img/billiard.jpg" class="img-fluid" alt="">
+                <a href="assets/img/billiard.jpg" class="link-preview portfolio-lightbox"
+                  data-gallery="portfolioGallery" title="Biliárd"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 2</a></h4>
-                <p>Web</p>
+                <h4>Biliárd</h4>
               </div>
             </div>
           </div>
@@ -293,8 +286,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/szoba2.jpg" class="img-fluid" alt="">
-                <a href="assets/img/szoba2.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Szoba"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/szoba2.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery"
+                  title="Szoba"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -307,8 +300,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/szauna.jpg" class="img-fluid" alt="">
-                <a href="assets/img/szauna.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Szauna"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/szauna.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery"
+                  title="Szauna"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -321,8 +314,8 @@
             <div class="portfolio-wrap">
               <figure>
                 <img src="assets/img/uszoda.jpg" class="img-fluid" alt="">
-                <a href="assets/img/uszoda.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Uszoda"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/uszoda.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery"
+                  title="Uszoda"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
@@ -334,16 +327,13 @@
           <div class="col-lg-4 col-md-6 portfolio-item filter-web wow fadeInUp" data-wow-delay="0.2s">
             <div class="portfolio-wrap">
               <figure>
-                <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
-                <a href="assets/img/portfolio/portfolio-9.jpg" class="link-preview portfolio-lightbox"
-                  data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i
-                    class="bx bx-link"></i></a>
+                <img src="assets/img/csocso.jpg" class="img-fluid" alt="">
+                <a href="assets/img/csocso.jpg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery"
+                  title="Csocsó & Léghoki"><i class="bx bx-plus"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Web 1</a></h4>
-                <p>Web</p>
+                <h4>Csocsó & Léghoki</h4>
               </div>
             </div>
           </div>
@@ -358,8 +348,8 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Testimonials</h2>
-          <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem</p>
+          <h2>Programok</h2>
+          <p>Ha megéheznénk, vagy másik fürdőt is kipróbálnánk...</p>
         </div>
 
         <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
@@ -369,13 +359,14 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus. Accusantium
-                  quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.
+                  Üdvözöljük az egri Expressz - Aranysíp Étterem honlapján. Az EXPRESSZ - Önkiszolgáló - Étteremben,
+                  háromféle kedvezményes napi menü ajánlattal, kedvező árakkal várjuk kedves régi és leendő
+                  vendégeinket. Csoportok étkeztetését is vállaljuk. Napi és heti aktuális menü ajánlatunkat <a href="https://expresszetterem.freewb.hu/menu/" target="_blank">IDE
+                  KATTINTVA</a> tekinthetik meg.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <a href="https://expresszetterem.freewb.hu/" target="_blank"><img src="assets/img/express.jpg" class="testimonial-img" alt=""></a>
+                <h3>Express étterem</h3>
               </div>
             </div><!-- End testimonial item -->
 
