--- a/index.html
+++ b/index.html
@@ -361,11 +361,13 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Üdvözöljük az egri Expressz - Aranysíp Étterem honlapján. Az EXPRESSZ - Önkiszolgáló - Étteremben,
                   háromféle kedvezményes napi menü ajánlattal, kedvező árakkal várjuk kedves régi és leendő
-                  vendégeinket. Csoportok étkeztetését is vállaljuk. Napi és heti aktuális menü ajánlatunkat <a href="https://expresszetterem.freewb.hu/menu/" target="_blank">IDE
-                  KATTINTVA</a> tekinthetik meg.
+                  vendégeinket. Csoportok étkeztetését is vállaljuk. Napi és heti aktuális menü ajánlatunkat <a
+                    href="https://expresszetterem.freewb.hu/menu/" target="_blank">IDE
+                    KATTINTVA</a> tekinthetik meg.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <a href="https://expresszetterem.freewb.hu/" target="_blank"><img src="assets/img/express.jpg" class="testimonial-img" alt=""></a>
+                <a href="https://expresszetterem.freewb.hu/" target="_blank"><img src="assets/img/express.jpg"
+                    class="testimonial-img" alt=""></a>
                 <h3>Express étterem</h3>
               </div>
             </div><!-- End testimonial item -->
@@ -374,13 +376,14 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis
-                  quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                  A Trifla Ivó és Konyha Eger egyik legkiválóbb étterme, ahol a gasztronómiai élmény mellé a vendégek
+                  pörgős kiszolgálást kapnak, családias hangulatban. Az étlap a Bükk meseszép tájainak ízvilágát
+                  eleveníti meg, különös figyelmet fordítva a névadó szarvasgomba változatos felhasználására.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <a href="http://triflaeger.hu/" target="_blank"><img src="assets/img/trifla.jpg" class="testimonial-img"
+                    alt=""></a>
+                <h3>Trifla Ivó & Konyha</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -388,13 +391,15 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim
-                  tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                  A Bükkszék többszintes fürdőépületében mindenki megtalálja a maga számára
+                  kényelmes pihenési lehetőséget. A fürdőt hazánk egyik legnépszerűbb gyógyvize, a 39 fokos Salvus
+                  gyógyvíz tette ismertté. Van itt pezsgőfürdő, úgynevezett dögönyözőkkel, nyakzuhannyal, buzgárokkal
+                  felszerelve. A wellness részleg szaunával, gőzfürdővel...
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <a href="https://bukkszekfurdo.hu/" target="_blank"><img src="assets/img/bukkszek.jpg"
+                    class="testimonial-img" alt=""></a>
+                <h3>Bükkszékfürdő Fürdőház</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -402,13 +407,15 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit
-                  minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.
+                  Az Egri Termálfürdő 1932-ben nyitotta meg kapuit. Magyarország egyik legszebb, legismertebb
+                  fürdőhelye. Az 5 hektáron elterülő parkfürdő a gyógyulni, sportolni és szórakozni vágyók Paradicsoma!
+                  A fedett-nyitott vízi élménysziget 13 medencével, sportpályákkal, játszótérrel és a Török Fürdőbe
+                  közvetlen átjárási lehetőséggel rendelkezik.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <a href="https://termalfurdo.egertermal.hu/" target="_blank"><img src="assets/img/egerterm.jpg"
+                    class="testimonial-img" alt=""></a>
+                <h3>Egri Termálfürdő</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -416,13 +423,15 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                  Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam enim culpa
-                  labore duis sunt culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.
+                  A Mátra szívében, Gyöngyöstől 6 km-re fekszik Mátrafüred üdülőfalu, melynek központjában a 24-es főút
+                  mellett található a több évtizedes hagyományokkal rendelkező Benevár Étterem.
+                  A vendéglő egész évben várja kedves Vendégeit házias konyhájával, finom ízeivel, udvarias
+                  kiszolgálással és szolid áraival.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <a href="https://termalfurdo.egertermal.hu/" target="_blank"><img src="assets/img/benevar.jpg"
+                    class="testimonial-img" alt=""></a>
+                <h3>Benevár Étterem</h3>
               </div>
             </div><!-- End testimonial item -->
 
@@ -433,80 +442,14 @@
       </div>
     </section><!-- End Testimonials Section -->
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Team</h2>
-          <p>Sit sint consectetur velit quos quisquam cupiditate nemo qui</p>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/team/team-1.jpg" alt="">
-              <h4>Walter White</h4>
-              <span>Chief Executive Officer</span>
-              <p>
-                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut
-                aut
-              </p>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/team/team-2.jpg" alt="">
-              <h4>Sarah Jhinson</h4>
-              <span>Product Manager</span>
-              <p>
-                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-              </p>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-            <div class="member">
-              <img src="assets/img/team/team-3.jpg" alt="">
-              <h4>William Anderson</h4>
-              <span>CTO</span>
-              <p>
-                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
-              </p>
-              <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Team Section -->
 
     <!-- ======= Contact Section ======= -->
     <section id="contact" class="contact section-bg">
       <div class="container">
 
         <div class="section-title">
-          <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit eius consequatur ex aliquid fuga</p>
+          <h2>Kapcsolat</h2>
+          <p>A Hotel és más helyek elérhetőségei</p>
         </div>
 
         <div class="row mt-5 justify-content-center">
@@ -516,21 +459,28 @@
             <div class="info-wrap">
               <div class="row">
                 <div class="col-lg-4 info">
-                  <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street<br>New York, NY 535022</p>
+                  <a href="https://www.google.com/maps/place/Par%C3%A1d,+Kossuth+Lajos+%C3%BAt+372,+3240/@47.925804,20.059898,16z/data=!4m5!3m4!1s0x474060b0346fff07:0x325e1517e778c34c!8m2!3d47.925664!4d20.0596539?hl=hu"
+                    target="_blank"><i class="bi bi-geo-alt"></i></a>
+                  <h4>Cím:</h4>
+                  <a href="https://www.google.com/maps/place/Par%C3%A1d,+Kossuth+Lajos+%C3%BAt+372,+3240/@47.925804,20.059898,16z/data=!4m5!3m4!1s0x474060b0346fff07:0x325e1517e778c34c!8m2!3d47.925664!4d20.0596539?hl=hu"
+                    target="_blank">
+                    <p>3244 Parádfürdő<br>
+                      Kossuth Lajos út 372.</p>
+                  </a>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <a href="https://erzsebetparkhotel.hu/" target="_blank"><i class="bi bi-browser-safari"></i></a>
+                  <h4>Web</h4>
+                  <a href="https://erzsebetparkhotel.hu/" target="_blank">
+                    <p>https://erzsebetparkhotel.hu/</p>
+                  </a>
                 </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+1 5589 55488 51<br>+1 5589 22475 14</p>
+                  <h4>Telefon:</h4>
+                  <p><a href="tel:+36209698854"> A hotel száma: +36 20 969 8854</a></p>
                 </div>
               </div>
             </div>
@@ -539,33 +489,6 @@
 
         </div>
 
-        <div class="row mt-5 justify-content-center">
-          <div class="col-lg-10">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
-          </div>
-
-        </div>
 
       </div>
     </section><!-- End Contact Section -->
@@ -575,55 +498,7 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    <div class="footer-top">
-      <div class="container">
-        <div class="row">
-
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Lumia</h3>
-            <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
-            </p>
-          </div>
-
-          <div class="col-lg-2 col-md-6 footer-links">
-            <h4>Useful Links</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
-            <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
-            </ul>
-          </div>
-
-          <div class="col-lg-4 col-md-6 footer-newsletter">
-            <h4>Join Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
-            <form action="" method="post">
-              <input type="email" name="email"><input type="submit" value="Subscribe">
-            </form>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
+    
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
