--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap" rel="stylesheet"> 
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -74,6 +78,7 @@
     <div class="container text-center text-md-left" data-aos="fade-up">
       <h1>Romantikus Hétvége</h1>
       <h2>Egy nyugodt hétvége kettesben a Mátrában...</h2>
+      <p id="demo" class="szamlalo"></p>
       <a href="#about" class="btn-get-started scrollto">Részletesebben...</a>
     </div>
   </section><!-- End Hero -->
@@ -126,13 +131,15 @@
 
 
     <!-- ======= Services Section ======= -->
-    <section id="services" class="services section-bg">
+    <section id="services" class="services paralax-mf bg-image" style="background-image: url(assets/img/ketten.JPG)">
+      <div class="overlay-mf"></div>
       <div class="container">
 
-        <div class="section-title">
+        <div class="section-title icon-box">
           <h2>Részletek</h2>
           <p>Információk a szállással és hétvégével kapcsolatban</p>
         </div>
+        <br>
 
         <div class="row">
           <div class="col-md-6">
@@ -429,7 +436,7 @@
                   kiszolgálással és szolid áraival.
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
-                <a href="https://termalfurdo.egertermal.hu/" target="_blank"><img src="assets/img/benevar.jpg"
+                <a href="http://benevaretterem.hu/" target="_blank"><img src="assets/img/benevar.jpg"
                     class="testimonial-img" alt=""></a>
                 <h3>Benevár Étterem</h3>
               </div>
@@ -452,15 +459,13 @@
           <p>A Hotel és más helyek elérhetőségei</p>
         </div>
 
-        <div class="row mt-5 justify-content-center">
+        <div class="row">
 
-          <div class="col-lg-10">
+          <div class="col-12">
 
             <div class="info-wrap">
               <div class="row">
-                <div class="col-lg-4 info">
-                  <a href="https://www.google.com/maps/place/Par%C3%A1d,+Kossuth+Lajos+%C3%BAt+372,+3240/@47.925804,20.059898,16z/data=!4m5!3m4!1s0x474060b0346fff07:0x325e1517e778c34c!8m2!3d47.925664!4d20.0596539?hl=hu"
-                    target="_blank"><i class="bi bi-geo-alt"></i></a>
+                <div class="col-4"><i class="bi bi-geo-alt" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Cím:</h4>
                   <a href="https://www.google.com/maps/place/Par%C3%A1d,+Kossuth+Lajos+%C3%BAt+372,+3240/@47.925804,20.059898,16z/data=!4m5!3m4!1s0x474060b0346fff07:0x325e1517e778c34c!8m2!3d47.925664!4d20.0596539?hl=hu"
                     target="_blank">
@@ -469,18 +474,24 @@
                   </a>
                 </div>
 
-                <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <a href="https://erzsebetparkhotel.hu/" target="_blank"><i class="bi bi-browser-safari"></i></a>
+                <div class="col-4">
+                  <i class="bi bi-browser-safari" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Web</h4>
                   <a href="https://erzsebetparkhotel.hu/" target="_blank">
                     <p>https://erzsebetparkhotel.hu/</p>
                   </a>
                 </div>
 
-                <div class="col-lg-4 info mt-4 mt-lg-0">
-                  <i class="bi bi-phone"></i>
+                <div class="col-4">
+                  <i class="bi bi-phone" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Telefon:</h4>
-                  <p><a href="tel:+36209698854"> A hotel száma: +36 20 969 8854</a></p>
+                  <p><b>[ Kattintásra hívja is ]</b></p>
+                  <p class="igazit">Hotel:<a href="tel:+36209698854">+36 20 969 8854</a></p>
+                  <p class="igazit">Benevár étterem:<a href="tel:+3637320261">+36 (37) 320-261</a></p>
+                  <p class="igazit">Bükkszékfürdő:<a href="tel:+36305003437">+36 (30) 500-34-37</a></p>
+                  <p class="igazit">Egri fürdő:<a href="tel:+3636510558">+36 (36) 510-558</a></p>
+                  <p class="igazit">Express étterem:<a href="tel:+36202982885">+36 (20) 298-28-85</a></p>
+                  <p class="igazit">Trifla étterem:<a href="tel:+36309574969">+36 (30) 957-4969</a></p>
                 </div>
               </div>
             </div>
@@ -498,27 +509,20 @@
   <!-- ======= Footer ======= -->
   <footer id="footer">
 
-    
+
     <div class="container d-md-flex py-4">
 
       <div class="me-md-auto text-center text-md-start">
         <div class="copyright">
-          &copy; Copyright <strong><span>Lumia</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>rekalaca mvk</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/lumia-bootstrap-business-template/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <div class="credits">Designed by <a href="mailto:rekalaca@gmail.com">rekalaca</a>
         </div>
       </div>
       <div class="social-links text-center text-md-right pt-3 pt-md-0">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-        <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        <a href="https://www.facebook.com/rekalaca" class="facebook"><i class="bx bxl-facebook"></i></a>
+        <a href="https://www.instagram.com/rekasi.l/" class="instagram"><i class="bx bxl-instagram"></i></a>
+        <a href="skype:rekalaca1" class="google-plus"><i class="bx bxl-skype"></i></a>
       </div>
     </div>
   </footer><!-- End Footer -->
@@ -537,6 +541,37 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <script>
+    // Set the date we're counting down to
+    var countDownDate = new Date("oct 21, 2022 08:00:00").getTime();
+
+    // Update the count down every 1 second
+    var x = setInterval(function () {
+
+      // Get today's date and time
+      var now = new Date().getTime();
+
+      // Find the distance between now and the count down date
+      var distance = countDownDate - now;
+
+      // Time calculations for days, hours, minutes and seconds
+      var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+      var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+      var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+      var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+      // Display the result in the element with id="demo"
+      document.getElementById("demo").innerHTML = days + " nap " + hours + " óra "
+        + minutes + " perc " + seconds + " másodperc van még hátra!";
+
+      // If the count down is finished, write some text
+      if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("demo").innerHTML = "Eljött a MI időnk! :-)";
+      }
+    }, 1000);
+  </script>
 
 </body>
 
