--- a/index.html
+++ b/index.html
@@ -461,11 +461,11 @@
 
         <div class="row">
 
-          <div class="col-12">
+          <div class="col-lg-12">
 
             <div class="info-wrap">
               <div class="row">
-                <div class="col-4"><i class="bi bi-geo-alt" style="font-size: 2rem; color: cornflowerblue;"></i>
+                <div class="col-lg-4 col-md-6"><i class="bi bi-geo-alt" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Cím:</h4>
                   <a href="https://www.google.com/maps/place/Par%C3%A1d,+Kossuth+Lajos+%C3%BAt+372,+3240/@47.925804,20.059898,16z/data=!4m5!3m4!1s0x474060b0346fff07:0x325e1517e778c34c!8m2!3d47.925664!4d20.0596539?hl=hu"
                     target="_blank">
@@ -474,7 +474,7 @@
                   </a>
                 </div>
 
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6">
                   <i class="bi bi-browser-safari" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Web</h4>
                   <a href="https://erzsebetparkhotel.hu/" target="_blank">
@@ -482,7 +482,7 @@
                   </a>
                 </div>
 
-                <div class="col-4">
+                <div class="col-lg-4 col-md-6">
                   <i class="bi bi-phone" style="font-size: 2rem; color: cornflowerblue;"></i>
                   <h4>Telefon:</h4>
                   <p><b>[ Kattintásra hívja is ]</b></p>
